--- a/staff/gabriel-rodriguez/index.html
+++ b/staff/gabriel-rodriguez/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Curriculum Vitae</h1>
+    <h1><ins>Curriculum Vitae</ins></h1>
     <section>
         <h3>Datos personales</h3>
         <ul>
