añado función boton y enlace a correo

--- a/staff/gabriel-rodriguez/index.html
+++ b/staff/gabriel-rodriguez/index.html
@@ -35,10 +35,20 @@
         </ul>
     </section>
     <section>
-    <h3>Mi Linkedin</h3>
-    <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi linkedin</a>
-    <!-- <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi linkedin</a> -->
-    <!-- El target="_blank" esto se usa para cuando metas un link se abra en otra ventana -->
+        <h3>Mi Linkedin</h3>
+        <button onclick="linkedin.gabriel='https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/'">Te
+            espero en Linkedin</button>
+        <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi
+            linkedin</a>
+        <!-- <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi linkedin</a> -->
+        <!-- El target="_blank" esto se usa para cuando metas un link se abra en otra ventana -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p><b>Para cualquier duda no dudes en enviar un correo</b></p>
+        <a href="mailto:gabryi.gr@gmail.com">Email</a>
     </section>
 </body>
 
