--- a/staff/jaume-rodriguez/index.html
+++ b/staff/jaume-rodriguez/index.html
@@ -6,32 +6,121 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Jaume Rodríguez Roca</title>
 </head>
-<body>
-    <h1>CV</h1>
-    <h2>Datos Personales</h2>
+<style>
+    #barra{
+        position: fixed;
+        width: 6%;
+        height: 100%;
+        background: rgb(97, 97, 97);
+    }
+</style>
+<style>
+    #fondo{
+        background-color: rgb(228, 225, 220);
+    }
+</style>
+<style>
+    #hipervinculos{
+        font-weight: bold;
+        color: rgb(57, 121, 173);
+        text-decoration: none;
+    }
+</style>
+<body id="fondo">
+    <div id="barra"></div>
+    <style>
+        #cuerpo{
+            color: rgb(46, 45, 43);
+            background-color: rgb(255, 253, 245);
+            width: 80%;
+            height: 100%;
+            align-content: center;
+            margin: auto;
+            padding: 3%;
+        }
+    </style>
+    <style>
+        #updateText{
+            font-weight: bold;
+            color: rgb(97, 97, 97);
+            font-style: italic;
+            font-size: small;
+            margin-bottom: -20px;
+        }
+    </style>
+    <style>
+        #h2{
+            background-color: rgb(248, 238, 226);
+            font-weight: lighter;
+            color: rgb(87, 80, 68);
+        }
+    </style>
+    <style>
+        #h3{
+            font-weight: lighter;
+            color: rgb(87, 80, 68);
+            font-size: 105%;
+        }
+    </style>
+<div id="cuerpo">
+    <p id="updateText">Update: 28/09/2022</p>
+    <h1>Currículum Vitae</h1>
+    <hr>
+    <img
+    src="https://st2.depositphotos.com/1408467/6146/v/380/depositphotos_61464021-stock-illustration-the-faceless.jpg?forcejpeg=true" width="250"
+    alt="Foto Perfil"
+    >
+    <h2 id="h2">Datos Personales</h2>
     <section>
         <ul>
-            <li>Nombre: Jaume Rodríguez Roca</li>
-            <li>Edad: 36 años</li>
-            <li><b>Fecha de nacimiento:</b> 27/10/1985</li>
-            <li>Ciudad: Palma de Mallorca</li>
+            <b>Nombre:</b> Jaume Rodríguez Roca
+            <br>
+            <b>Edad:</b> 36 años</li>
+            <br>
+            <b>Residencia:</b> Palma de Mallorca
+            <br>
+            <b>Nacionalidad:</b> Española
+        </ul>
+        <ul>
+            <b>Idiomas:</b>
+            <br>
+            Castellano y Catalán / Nativo
+            <br>
+            Inglés e Italiano / C2
+            <br>
+            Alemán / B1
+            <br>
+            <br>
+            <a href="https://www.linkedin.com/in/jrodriguezroca/" target="_blank" id="hipervinculos">Mi LinkedIn</a>
         </ul>
     </section>
+    <br>
     <section>
-        <h2>Formación</h2>
-        <h3>Estudios</h3>
+        <hr>
+        <h2 id="h2">Formación</h2>
+        <h3 id="h3">Conocimientos de Software</h3>
         <ul>
-            <li>Ilustrador</li>
+            <li>Adobe Ilustrator</li>
+            <li>Adobe Photoshop</li>
+            <li>Adobe After Effects</li>
+            <li>Visual Code ( Html, CSS3 y JavaScript)</li>
+        </ul>
+        <h3 id="h3">Estudios</h3>
+        <ul>
             <li>Diseñador Gráfico</li>
             <li>Web Developer</li>
         </ul>
-        <h3>Conocimientos de Software</h3>
+    </section>
+    <br>
+    <section>
+        <hr>
+        <h2 id="h2">Habilidades</h2>
         <ul>
-            <li>Ilustrator</li>
-            <li>Photoshop</li>
-            <li>After Effects</li>
-            <li>Visual Code ( Html, CSS3 y JavaScript)</li>
+            <li>Trabajo en Equipo</li>
+            <li>Comunicación</li>
+            <li>Liderazgo</li>
         </ul>
     </section>
+</div>
 </body>
 </html>
