Añadido sección figure y pie de imagen con figcaption

--- a/staff/jaume-rodriguez/index.html
+++ b/staff/jaume-rodriguez/index.html
@@ -66,10 +66,13 @@
     <p id="updateText">Update: 28/09/2022</p>
     <h1>Currículum Vitae</h1>
     <hr>
+<figure> <!-- Cuidado, porque el Figure aplica estilos -->
     <img
-    src="https://st2.depositphotos.com/1408467/6146/v/380/depositphotos_61464021-stock-illustration-the-faceless.jpg?forcejpeg=true" width="250"
+    src="https://st2.depositphotos.com/1408467/6146/v/380/depositphotos_61464021-stock-illustration-the-faceless.jpg?forcejpeg=true" width="250px"
     alt="Foto Perfil"
     >
+    <figcaption>Imagen de perfil</figcaption>
+</figure>
     <h2 id="h2">Datos Personales</h2>
     <section>
         <ul>
