agregando contenido linkedin

--- a/staff/federico-alejandro/index.html
+++ b/staff/federico-alejandro/index.html
@@ -23,9 +23,15 @@
       <li>Analista en Adm bancaria y Comercio exterior. 
         año: 2010 - 2013</li>
       <li>Adm y gestion de las organizaciones
-        nivel polimodal: año 2000 - 2004</li>
-    </ol> 
+        nivel polimodal: año 2000 - 2004</li> 
     </ul>
+    </section>
+    <section>
+      <h2>red social</h2>
+      <a href>https://www.linkedin.com/in/federico-alejandro/ </a>
+
+
+
     </section>
 
 </body>
