--- a/staff/yubal-hormiga/index.html
+++ b/staff/yubal-hormiga/index.html
@@ -7,7 +7,8 @@
     <title>CV Yubal Hormiga</title>
   </head>
   <body>
-    <h1><u>Curriculum Vitae</u></h1>
+    <img style="display: inline ; width: 60px; height: 60px; border-radius: 50% " src="./1661076223460.jpeg" alt="foto cv">
+    <h1>Curriculum Vitae</h1>
     <section>        
         <h2><b><i>Datos Personales</i></b></h2>
         <ul>
@@ -39,11 +40,24 @@
         </li>
         <li>
           <p>
-            Agente de viajes (Socio)Agente de viajes (Socio) FORMIGA TOURSFORMIGA
-            TOURS jun. 2013 - dic. 2018
+            Agente de viajes (Soc FORMIGA TOURSFORMIGA
+            TOURS) jun. 2013 - dic. 2018
           </p>
         </li>
       </ul>
+    </section>
+    <section>
+    <h2><b><i>Conocimientos y Aptitudes</i></b></h2>      
+      <ul>
+        <li>Seriedad</li>
+        <li>Aptitud positiva</li>
+        <li>Trabajo en equipo</li>
+      </ul>
+    </section>
+    <section>
+    <h2><b><i>Proyectos</i></b></h2>      
+      
+    <a style="text-decoration:none ; background-color: rgb(52, 71, 71) ; color: white; padding: 10px; border-radius: 10px;" href="https://github.com/YubalHormiga?tab=repositories">GitHub</a>
     </section>
   </body>
 </html>
