mv folder index.html to cv folder, add email link

--- a/staff/xavi-grandes/cv/index.html
+++ b/staff/xavi-grandes/cv/index.html
@@ -12,7 +12,7 @@
         <p><b>Nombre:</b> Xavi Grandes Rovira</p>
         <p><b>Localidad:</b> Barcelona</p>
         <p><b>Fecha de nacimiento:</b> 16/04/1992</p>
-        <p><b>Email:</b> xavigr92@gmail.com</p>
+        <p><b>Email: </b><a href="mailto:xavigr92@gmail.com">xavigr92@gmail.com</a></p>
         <p><b>Visita mi perfil: </b><a href="https://www.linkedin.com/in/xavi-grandes-rovira/" target="_blank">Linkedin</a></p>
     </section>
 <br>
