--- a/staff/gabriel-rodriguez/cv/index.html
+++ b/staff/gabriel-rodriguez/cv/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
+
     <h1><ins>Curriculum Vitae</ins></h1>
+    <figure>
+        <img src="assets/gabri.jpg" width="200" height="200" alt="Gabriel" />
+        <figcaption>Mi imagen de perfil</figcaption>
+    </figure>
+    <!-- <figure>se usa para dar una descripción a la imagen, si no tiene descripción no hace falta ponerlo</figure> -->
     <section>
         <h3>Datos personales</h3>
         <ul>
@@ -19,13 +25,18 @@
         </ul>
     </section>
     <section>
+        <p>Mis estudios están basados en conocimientos financieros, al estar varios años en esta rama, <br>
+            he decidido cambiar completamente de aires y dedicarme al mundo de la programación, actualmente <br>
+            estoy estudiando un bootcamp fullstack en NEOLAND.
+        </p>
+    </section>
+    <section>
         <h3>Formación</h3>
         <ul>
             <li>Backoffice Intermundial</li>
             <li>Backoffice Hipoges Iberia</li>
         </ul>
     </section>
-    <p>Estudios principalmente centrados en finanzas y excel, actualmente estudiando un bootcamp fullstack</p>
     <section>
         <h3>Hobbies</h3>
         <ul>
@@ -34,10 +45,14 @@
             <li>Juegos de estrategia</li>
         </ul>
     </section>
+    <br>
     <section>
         <h3>Mi Linkedin</h3>
+        <a></a>
         <button onclick="linkedin.gabriel='https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/'">Te
             espero en Linkedin</button>
+        <!-- El <button>solo funcionna enlazandolo a java script</button> -->
+        <br>
         <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi
             linkedin</a>
         <!-- <a href="https://www.linkedin.com/in/gabriel-rodr%C3%ADguez-l%C3%B3pez-43b631142/" target="_blank">Enlace a mi linkedin</a> -->
@@ -48,7 +63,12 @@
         <br>
         <br>
         <p><b>Para cualquier duda no dudes en enviar un correo</b></p>
-        <a href="mailto:gabryi.gr@gmail.com">Email</a>
+        <div>
+            <img src="https://cdn-icons-png.flaticon.com/128/2165/2165061.png" width="20" height="20" alt="mail">
+            <a href="mailto:gabryi.gr@gmail.com">gabryi.gr@gmail.com</a>
+        </div>
+        <!-- <a href="mailto:gabryi.gr@gmail.com?subject=CV "Esto es el encabezado" contact&body=este es el cuerpo del correo">Email</a> -->
+        <!-- Para añadir una imagen es <img src="ruta de la imagen"alt="descripción de la foto ej:girl with jackect"     -->
     </section>
 </body>
 
