--- a/staff/patricio-valdes/cv/index.html
+++ b/staff/patricio-valdes/cv/index.html
@@ -12,17 +12,17 @@
     <section>
     <h2>Datos Personales:</h2>
     <ul>
-        <li>Nombre: Patricio Valdés Pascuallll</li>
+        <li>Nombre: Patricio Valdés Pascual</li>
         <li>Edad: 39 Años</li>
         <li>Residencia: Malaga</li>
         <li>Email: pvaldes.pascual@gmail.com</li>
 
      <section>
-        <h2>Educacion</h2>
+    <h2>Educacion:</h2>
     <ul>
-        <li>Educacion Basica y Secundaria: XX</li>
-        <li>Educacion Universitaria: XX</li>
-        <li>Educacion Complemetaria: XX</li>
-
+        <li>Educacion Basica y Secundaria</li>
+        <li>Educacion Universitaria</li>
+        <li>Educacion Complemetaria</li>
+    <ul>   
 </body>
 </html>
