add imagen profile

--- a/staff/sergio-asensio/cv/index.html
+++ b/staff/sergio-asensio/cv/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Curriculum Vitae</h1>
         <hr>
-        <img src="https://icons-for-free.com/download-icon-instagram+profile+user+icon-1320184028326496024_128.png alt="foto">
+        <img src="https://icons-for-free.com/download-icon-instagram+profile+user+icon-1320184028326496024_128.png"alt="foto">
         <b>Nombre:</b> Sergio Asensio Lamata
         <br>
         <b>Localidad:</b> Zaragoza
