Cambio de id a class en div contenedor global

--- a/staff/jaume-rodriguez/picasso/index.html
+++ b/staff/jaume-rodriguez/picasso/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <div id="center">
+    <div class="center">
       <h2><span class="nameAnimal">Fox Picasso</span></h2>
       <h4><span class="signature">Created by Jaume</span></h4>
       <section>
