add flex property to all elements

--- a/staff/jaume-rodriguez/picasso/index.html
+++ b/staff/jaume-rodriguez/picasso/index.html
@@ -8,49 +8,47 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
-    <div class="center">
-      <h2><span class="nameAnimal">Fox Picasso</span></h2>
-      <h4><span class="signature">Created by Jaume</span></h4>
-      <section>
-        <!-- Cabeza -->
-        <div class="cabezaZorro"></div>
-        <div class="sombraCabezaZorro"></div>
-        <div class="ojoDer"></div>
-        <div class="ojoDerIris"></div>
-        <div class="ojoIzq"></div>
-        <div class="ojoIzqIris"></div>
-        <div class="nariz"></div>
-        <div class="orejaDer"></div>
-        <div class="sombraOrejaDer"></div>
-        <div class="orejaIzq"></div>
-        <div class="sombraOrejaIzq"></div>
-        <div class="mofleteDer"></div>
-        <div class="mofleteIzq"></div>
-      </section>
-      <section>
-        <!-- Cuerpo -->
-        <div class="cuerpoZorro"></div>
-        <div class="sombraCuerpoZorro"></div>
-        <div class="patasZorroUno"></div>
-        <div class="patasZorroDos"></div>
-        <div class="traseroZorro"></div>
-      </section>
-      <section>
-        <!-- Cola -->
-        <div class="colaZorroUno"></div>
-        <div class="sombraColaZorroUno"></div>
-        <div class="sombraPequenyaColaZorroUno"></div>
-        <div class="colaZorroDos"></div>
-        <div class="colaZorroTres"></div>
-        <div class="sombraColaZorroTresUno"></div>
-        <div class="sombraColaZorroTresDos"></div>
-        <div class="sombraColaZorroTresTres"></div>
-        <div class="colaZorroCuatro"></div>
-        <div class="sombraColaZorroCuatro"></div>
-        <div class="sombraColaZorroCuatroUno"></div>
-        <div class="sombraColaZorroCuatroDos"></div>
-        <div class="sombraColaZorroCuatroTres"></div>
-      </section>
+    <h2><span class="nameAnimal">Fox Picasso</span></h2>
+    <h4><span class="signature">Created by Jaume</span></h4>
+    <div class="centerCabeza">
+      <!-- Cabeza -->
+      <div class="cabezaZorro"></div>
+      <div class="sombraCabezaZorro"></div>
+      <div class="ojoDer"></div>
+      <div class="ojoDerIris"></div>
+      <div class="ojoIzq"></div>
+      <div class="ojoIzqIris"></div>
+      <div class="nariz"></div>
+      <div class="orejaDer"></div>
+      <div class="sombraOrejaDer"></div>
+      <div class="orejaIzq"></div>
+      <div class="sombraOrejaIzq"></div>
+      <div class="mofleteDer"></div>
+      <div class="mofleteIzq"></div>
+    </div>
+    <div class="centerCuerpo">
+      <!-- Cuerpo -->
+      <div class="cuerpoZorro"></div>
+      <div class="sombraCuerpoZorro"></div>
+      <div class="patasZorroUno"></div>
+      <div class="patasZorroDos"></div>
+      <div class="traseroZorro"></div>
+    </div>
+    <div class="centerCola">
+      <!-- Cola -->
+      <div class="colaZorroUno"></div>
+      <div class="sombraColaZorroUno"></div>
+      <div class="sombraPequenyaColaZorroUno"></div>
+      <div class="colaZorroDos"></div>
+      <div class="colaZorroTres"></div>
+      <div class="sombraColaZorroTresUno"></div>
+      <div class="sombraColaZorroTresDos"></div>
+      <div class="sombraColaZorroTresTres"></div>
+      <div class="colaZorroCuatro"></div>
+      <div class="sombraColaZorroCuatro"></div>
+      <div class="sombraColaZorroCuatroUno"></div>
+      <div class="sombraColaZorroCuatroDos"></div>
+      <div class="sombraColaZorroCuatroTres"></div>
     </div>
   </body>
 </html>
