--- a/staff/sergio-asensio/picasso/index.html
+++ b/staff/sergio-asensio/picasso/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<div= class="muñeco">
+<div class="muñeco">
     <div class="cabeza"></div>
     <div class="cuello"></div>
     <div class="cuerpo"></div>
