Nuevos archivos app con formulario input y pruebas con css3

--- a/staff/jaume-rodriguez/picasso/index.html
+++ b/staff/jaume-rodriguez/picasso/index.html
@@ -7,48 +7,60 @@
     <title>Picasso</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
-  <body>
+  <body class="container">
     <h2><span class="nameAnimal">Fox Picasso</span></h2>
     <h4><span class="signature">Created by Jaume</span></h4>
-    <div class="centerCabeza">
+    <div class="container">
       <!-- Cabeza -->
-      <div class="cabezaZorro"></div>
-      <div class="sombraCabezaZorro"></div>
-      <div class="ojoDer"></div>
-      <div class="ojoDerIris"></div>
-      <div class="ojoIzq"></div>
-      <div class="ojoIzqIris"></div>
-      <div class="nariz"></div>
-      <div class="orejaDer"></div>
-      <div class="sombraOrejaDer"></div>
-      <div class="orejaIzq"></div>
-      <div class="sombraOrejaIzq"></div>
-      <div class="mofleteDer"></div>
-      <div class="mofleteIzq"></div>
+      <div class="cabezaZorro" class="container">
+        <div class="sombraCabezaZorro"></div>
+        <div class="ojoDer" class="container">
+          <div class="ojoDerIris"></div>
+        </div>
+        <div class="ojoIzq" class="container">
+          <div class="ojoIzqIris"></div>
+        </div>
+        <div class="nariz"></div>
+        <div class="orejaDer" class="container">
+          <div class="sombraOrejaDer"></div>
+        </div>
+        <div class="orejaIzq" class="container">
+          <div class="sombraOrejaIzq"></div>
+        </div>
+        <div class="mofleteDer"></div>
+        <div class="mofleteIzq"></div>
+      </div>
     </div>
-    <div class="centerCuerpo">
-      <!-- Cuerpo -->
-      <div class="cuerpoZorro"></div>
-      <div class="sombraCuerpoZorro"></div>
+
+    <!-- Cuerpo -->
+    <div class="container">
+      <div class="cuerpoZorro" class="container">
+        <div class="sombraCuerpoZorro"></div>
+      </div>
       <div class="patasZorroUno"></div>
       <div class="patasZorroDos"></div>
       <div class="traseroZorro"></div>
     </div>
-    <div class="centerCola">
-      <!-- Cola -->
-      <div class="colaZorroUno"></div>
-      <div class="sombraColaZorroUno"></div>
-      <div class="sombraPequenyaColaZorroUno"></div>
+
+    <!-- Cola -->
+    <div class="container">
+      <div class="colaZorroUno" class="container">
+        <div class="sombraColaZorroUno" class="container">
+          <div class="sombraPequenyaColaZorroUno"></div>
+        </div>
+      </div>
       <div class="colaZorroDos"></div>
-      <div class="colaZorroTres"></div>
-      <div class="sombraColaZorroTresUno"></div>
-      <div class="sombraColaZorroTresDos"></div>
-      <div class="sombraColaZorroTresTres"></div>
+      <div class="colaZorroTres" class="container">
+        <div class="sombraColaZorroTresUno"></div>
+        <div class="sombraColaZorroTresDos"></div>
+        <div class="sombraColaZorroTresTres"></div>
+      </div>
       <div class="colaZorroCuatro"></div>
-      <div class="sombraColaZorroCuatro"></div>
-      <div class="sombraColaZorroCuatroUno"></div>
-      <div class="sombraColaZorroCuatroDos"></div>
-      <div class="sombraColaZorroCuatroTres"></div>
+      <div class="sombraColaZorroCuatro" class="container">
+        <div class="sombraColaZorroCuatroUno"></div>
+        <div class="sombraColaZorroCuatroDos"></div>
+        <div class="sombraColaZorroCuatroTres"></div>
+      </div>
     </div>
   </body>
 </html>
