modified home header

--- a/staff/cristina-marquez/app/home.html
+++ b/staff/cristina-marquez/app/home.html
@@ -13,15 +13,16 @@
 
 <body>
     <header class="header">
-        <button><span class="material-symbols-outlined">
-                menu </span></button>
+        <button class="container">
+            <span class="material-symbols-outlined">menu</span>
+        </button>
 
         <h1 class="header__title">Hello,user</h1>
         <div class="header__menu">
-            <button>Profile</button>
-            <button><span class="material-symbols-outlined">
-                    exit_to_app
-                </span></button>
+            <button class="button">Profile</button>
+            <button>
+                <span class="material-symbols-outlined"> exit_to_app</span>
+            </button>
         </div>
 
     </header>
