agregando cambios en home.html login.html register.html style.css

--- a/staff/federico-alejandro/app/login.html
+++ b/staff/federico-alejandro/app/login.html
@@ -14,7 +14,7 @@
   <body class="container" ;>
     <h1>HOLA!</h1>
     <form action="" method="post" class="container">
-      <label for="emial" class="container__item--left">E-mail</label>
+      <label for="email" class="container__item--left">E-mail</label>
       <input type="email" name="email" id="mail" placeholder="Input your email">
 
       <label for="email" class=container__item--left>Password</label>
