modificated home register and login

--- a/staff/yubal-hormiga/app/login.html
+++ b/staff/yubal-hormiga/app/login.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="container">
-    <div class="fondo">
-      <fieldset class="radius">
-        <legend class="dates">Acceso</legend>
+    <div class="container__bg">
+      <fieldset class="container__field">
+        <legend class="container__legend">Acceso</legend>
         <form method="post" class="container">
           <label for="email" class="container__item--left">E-mail</label>
           <input
