--- a/staff/yubal-hormiga/app/register.html
+++ b/staff/yubal-hormiga/app/register.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="container">
-    <div class="fondo">
-      <fieldset class="radius">
-        <legend class="dates">Registro</legend>
+    <div class="container__bg">
+      <fieldset class="container__field">
+        <legend class="container__legend">Registro</legend>
         <form method="post" class="container">
           <label for="name" class="container__item--left">Name</label>
           <input
