--- a/staff/yubal-hormiga/app/home.html
+++ b/staff/yubal-hormiga/app/home.html
@@ -11,21 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0"
     />
   </head>
-  <body>
-    <header class="header">
-        <button>
-            <span class="material-symbols-outlined"> menu </span>
-        </button>
+ <body>
+  <header class="header">
+    <button class="header__menu-button container">
+      <span class="material-symbols-outlined"> menu </span>
+    </button>
 
+    <h1 class="header__title">Hello, user!</h1>
 
-
-        
-      <div class="header__menu">
-        <button>Profile</button>
-        <button>Logout</button>
-      </div>
-    </header>
-   
-
+    <div class="header__menu">
+      <button class="button button--profile">Profile</button>
+      <button>
+        <span class="material-symbols-outlined"> exit_to_app </span>
+      </button>
+    </div>
+  </header> 
+ 
   </body>
 </html>
