correccion flex-container

--- a/staff/federico-alejandro/mondrian/mondrian.html
+++ b/staff/federico-alejandro/mondrian/mondrian.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="flex-container">
     <div class="casilleros">
         <div class="items__casilleros"></div>
         <div class="items__casilleros"></div>
@@ -15,9 +16,7 @@
         <div class="items__casilleros"></div>
         <div class="items__casilleros"></div>
         <div class="items__casilleros"></div>
-        
-
-       
     </div>
+</section>
 </body>
 </html>
