--- a/staff/armando-alonso/app/login.html
+++ b/staff/armando-alonso/app/login.html
@@ -14,8 +14,8 @@
         <h1>Login</h1>
         <input class="input" type="email" name="qwer" id="email" placeholder="E-mail">
         <input class="input" type="password" name="sd" id="Password" placeholder="Password">
-        <label><input type="checkbox" id="ch1" value="checkbox">Respiras?</label>
-        <button class="button"></button>
+        <!-- <label><input type="checkbox" id="ch1" value="checkbox">Respiras?</label> -->
+        <button class="button">Login</button>
     </form>
     <div class="option">
         <a class="enlace" href="register.html">Register</a>
