--- a/staff/federico-alejandro/app/register.html
+++ b/staff/federico-alejandro/app/register.html
@@ -6,35 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="container">
-    <form action="" method="post">
-      <div>
-        <label for="name">Name</label>
-        <input type="text" name="" id="name" placeholder="input your name" />
-      </div>
-      <div>
-        <label for="email">E-mail</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="input your email"
-        />
-      </div>
+    <form action="" method="post" class="container">
+      <label for="name" class="container__item--left">Name</label>
+      <input type="text" name="" id="name" placeholder="input your name" />
 
-      <div>
-        <label for="Password">Password</label>
-        <input
-          type="password"
-          name=""
-          id="password"
-          placeholder="input your password"
-        />
-      </div>
-      <button>Register></button>
+      <label for="email" class="container__item--left">E-mail</label>
+      <input
+        type="email"
+        name="email"
+        id="email"
+        placeholder="input your email"/>
+
+      <label for="Password" class="container__item--left">Password</label>
+      <input
+        type="password"
+        name=""
+        id="password"
+        placeholder="input your password"/>
+
+      <button>Register</button>
     </form>
-    
   </body>
 </html>
