--- a/staff/manuel-barzi/vanilla-app/index.html
+++ b/staff/manuel-barzi/vanilla-app/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="coolog.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
