--- a/staff/jaume-rodriguez/vanilla-app/register.html
+++ b/staff/jaume-rodriguez/vanilla-app/register.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script src="coolog.js"></script>
     <script src="register.js"></script>
   </body>
 </html>
