--- a/staff/xavier-zamora/vanila-js-spa/index.html
+++ b/staff/xavier-zamora/vanila-js-spa/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOG IN</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
-    <script src="main.js"></script>
+
     <script src="lifejacket.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
