--- a/staff/yubal-hormiga/vanilla-app/index.html
+++ b/staff/yubal-hormiga/vanilla-app/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+        <script src="coollog.js"></script>
         <script src="main.js"></script>
 </body>
 </html>
