--- a/staff/gabriel-rodriguez/app/home.html
+++ b/staff/gabriel-rodriguez/app/home.html
@@ -26,7 +26,7 @@
                     logout
                 </span></button>
         </div>
-        <!-- <a href="/home.html"><img src="https://fakeimg.pl/30/ff0000"></a> -->
+        <a href="/home.html"><img src="https://fakeimg.pl/30/ff0000"></a>
     </header>
 </body>
 
