--- a/staff/gabriel-rodriguez/vanilla-app/index.html
+++ b/staff/gabriel-rodriguez/vanilla-app/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <script src="main.js"></script>
+<body class="containerbody">
+    <script src="coolog.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
