--- a/staff/xavi-grandes/app/register.html
+++ b/staff/xavi-grandes/app/register.html
@@ -23,8 +23,8 @@
                 <input type="password" name="password" id="password" placeholder="input your password">
             </div>
             <button>Login</button>
-            <a href="login.html">back</a>
         </form>
+        <a class="LoginLink" href="login.html">back</a>
     </div>
 </body>
 </html>
