--- a/staff/federico-alejandro/app/login.html
+++ b/staff/federico-alejandro/app/login.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="style.css">
 
   </head>
-  <body class="container" ;>
-    <h1>HOLA!</h1>
+  <body>
+    <h1>Login</h1>
     <form action="" method="post" class="container">
       <label for="email" class="container__item--left">E-mail</label>
       <input type="email" name="email" id="mail" placeholder="Input your email">
