renae and update files

--- a/staff/armando-alonso/app/home.html
+++ b/staff/armando-alonso/app/home.html
@@ -11,21 +11,18 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body class="home">
-    <header class="header">
-        <button class="menu">
-            <span class="material-symbols-outlined">
-                menu
-            </span>
-        </button>
-        <a href="login.html">
-            <button class="menu">
-                <span class="material-symbols-outlined">
-                    logout
-                </span>
-            </button>
-        </a>
-    </header>
+<body class="">
+    <nav class="navbar">
+        <div class="news">
+          <button class="desplegable">Home
+          </button>
+          <div class="news-content">
+            <a href="#">Sports</a>
+            <a href="#">Regional</a>
+            <a href="#">International</a>
+          </div>
+        </div>
+    </nav>
 </body>
 
 </html>
