--- a/staff/federico-alejandro/vanilla-app/login.html
+++ b/staff/federico-alejandro/vanilla-app/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
 </head>
 <body>
+    <script src="coolog.js"></script>
     <script src="login.js"></script>
     
 </body>
