--- a/staff/armando-alonso/app/home.html
+++ b/staff/armando-alonso/app/home.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
-<body class="">
+<body class="container">
     <nav class="navbar">
         <div class="news">
           <button class="desplegable">Home
