update and new files

--- a/staff/armando-alonso/vanilla-app/index.html
+++ b/staff/armando-alonso/vanilla-app/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "register.js"></script>
+    <script src = "coolog.js"></script>
+    <script src = "index.js"></script>
 </body>
 </html>
