copy project Manu

--- a/staff/yubal-hormiga/vanilla-app/index.html
+++ b/staff/yubal-hormiga/vanilla-app/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body>
-        <script src="coollog.js"></script>
-        <script src="main.js"></script>
+<body class="container">
+    <script src="libs/coolog.js"></script>
+
+    <script src="logic/register-user.js"></script>
+    <script src="logic/authenticate-user.js"></script>
+
+    <script src="pages/login-page.js"></script>
+    <script src="pages/register-page.js"></script>
+    <script src="pages/home-page.js"></script>
+    
+    <script src="index.js"></script>
 </body>
 </html>
