--- a/staff/federico-lopez/vanilla-app.2/index.html
+++ b/staff/federico-lopez/vanilla-app.2/index.html
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body class="container">
-    <script src="libs/coolog.js"></script>
-
-    <script src="logic/register-user.js"></script>
-    <script src="logic/authenticate-user.js"></script>
-
-    <script src="pages/login-page.js"></script>
-    <script src="pages/register-page.js"></script>
-    <script src="pages/home-page.js"></script>
-    
+    <script src="coolog.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
