--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,, initial-scale=1.0">
     <title>LogIn - Javascript</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <script src="coolog.js"></script>
+    <script src="libs/coolog.js"></script>
+
+    <script src="pages/login.js"></script>
+    <script src="pages/register.js"></script>
+    <script src="pages/home.js"></script>
+
     <script src="index.js"></script>
 </body>
 </html>
