add logic ang pages <sccripts> inside index.html

--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -11,6 +11,9 @@
 <body>
     <script src="libs/coolog.js"></script>
 
+    <script src="logic/authenticate-user.js"></script>
+    <script src="logic/register-user.js"></script>
+
     <script src="pages/login.js"></script>
     <script src="pages/register.js"></script>
     <script src="pages/home.js"></script>
