--- a/staff/jaume-rodriguez/vanilla-app/index.html
+++ b/staff/jaume-rodriguez/vanilla-app/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <script src="coolog.js"></script>
+    <script src="libs/coolog.js"></script>
+    <script src="pages/register-page.js"></script>
+    <script src="pages/login-page.js"></script>
+    <script src="pages/home-page.js"></script>
+    <script src="logic/register-user.js"></script>
+    <script src="logic/authenticate.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
