--- a/staff/cristina-marquez/vanilla-app-2/index.html
+++ b/staff/cristina-marquez/vanilla-app-2/index.html
@@ -5,21 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My App</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <script src="coolog.js"></script>
-
     <script src="index.js"></script>
-    <script src="./pages/login-page.js"></script>
-    <script src="./pages/register-page.js"></script>
-    <script src="./pages/home-page.js"></script>
-
-    <script src="./logic/authenticate-user.js"></script>
-    <script src="./logic/register-user.js"></script>
-
 </body>
 
 </html>
