--- a/staff/armando-alonso/vanilla-app/index.html
+++ b/staff/armando-alonso/vanilla-app/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "coolog.js"></script>
+    <script src = "libs/coolog.js"></script>
+
+    <script src = "logic/authenticate-user.js"></script>
+    <script src = "logic/register-user.js"></script>
+
+    <script src = "pages/login-page.js"></script>
+    <script src = "pages/register-page.js"></script>
+    <script src = "pages/home-page.js"></script>
+
     <script src = "index.js"></script>
 </body>
 </html>
