--- a/staff/yubal-hormiga/vanilla-app/index.html
+++ b/staff/yubal-hormiga/vanilla-app/index.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body class="container">
     <script src="libs/coolog.js"></script>
 
+    <script src="data/users.js"></script>
+
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
+    <script src="logic/update-user-email.js"></script>
+
+    <script src="components/settings-panel.js"></script>
+    <script src="components/tasks-panel.js"></script>
 
     <script src="pages/login-page.js"></script>
     <script src="pages/register-page.js"></script>
