--- a/staff/ignacio-nuñez/vanila-app/index.html
+++ b/staff/ignacio-nuñez/vanila-app/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <script src="./libs/coolog.js"></script>
+
+    <script src="./data/users.js"></script>
+
+    <script src="./logic/register-user.js"></script>
+    <script src="./logic/authenticate-user.js"></script>
+    <script src="./logic/update-user-email.js"></script>
+
+    <script src="./components/settings-panel.js"></script>
+    <script src="./components/tasks-panel.js"></script>
+
+    <script src="./pages/home-page.js"></script>
+    <script src="./pages/login-page.js"></script>
+    <script src="./pages/register-page.js"></script>
+    
     <script src="main.js"></script>
 </body>
+
 </html>
