--- a/staff/jaume-rodriguez/vanilla-app/index.html
+++ b/staff/jaume-rodriguez/vanilla-app/index.html
@@ -6,14 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <script src="libs/coolog.js"></script>
+
+    <script src="data/users.js"></script>
+
+    <script src="components/settings-panel.js"></script>
+    <script src="components/tasks-panel.js"></script>
+
     <script src="pages/register-page.js"></script>
     <script src="pages/login-page.js"></script>
     <script src="pages/home-page.js"></script>
+
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate.js"></script>
+    <script src="logic/update-user-credentials.js"></script>
+
     <script src="index.js"></script>
   </body>
 </html>
