--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -11,12 +11,14 @@
 <body>
     <script src="libs/coolog.js"></script>
 
-    <script src="logic/authenticate-user.js"></script>
-    <script src="logic/register-user.js"></script>
+    <script src="data/users.js"></script>
 
-    <script src="pages/login.js"></script>
-    <script src="pages/register.js"></script>
-    <script src="pages/home.js"></script>
+    <script src="logic/register-user.js"></script>
+    <script src="logic/authenticate-user.js"></script>
+
+    <script src="pages/login-page.js"></script>
+    <script src="pages/register-page.js"></script>
+    <script src="pages/home-page.js"></script>
 
     <script src="index.js"></script>
 </body>
