add input validation in register user logic

--- a/staff/manuel-barzi/vanilla-app/index.html
+++ b/staff/manuel-barzi/vanilla-app/index.html
@@ -11,6 +11,8 @@
 <body class="container">
     <script src="libs/coolog.js"></script>
 
+    <script src="utils/regex.js"></script>
+
     <script src="data/users.js"></script>
 
     <script src="logic/register-user.js"></script>
