--- a/staff/yubal-hormiga/vanilla-app/index.html
+++ b/staff/yubal-hormiga/vanilla-app/index.html
@@ -11,12 +11,16 @@
 <body class="container">
     <script src="libs/coolog.js"></script>
 
+    <script src="utils/regex.js"></script>
+
     <script src="data/users.js"></script>
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/update-user-email.js"></script>
 
+    <script src="components/header-panel.js"></script>
+    <script src="components/menu-panel.js"></script>
     <script src="components/settings-panel.js"></script>
     <script src="components/tasks-panel.js"></script>
 
