--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -15,6 +15,8 @@
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
+    
+    <script src="componentes/settings-panel.js"></script>
 
     <script src="pages/login-page.js"></script>
     <script src="pages/register-page.js"></script>
