added script: componentes/tasks-panel

--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -17,6 +17,7 @@
     <script src="logic/authenticate-user.js"></script>
     
     <script src="componentes/settings-panel.js"></script>
+    <script src="componentes/tasks-panel.js"></script>
 
     <script src="pages/login-page.js"></script>
     <script src="pages/register-page.js"></script>
