vanilla app args for user registration, tasks

--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -14,13 +14,18 @@
 <body>
     <script src="coolog.js"></script>
 
+    <script src="./utils/regex.js"></script>
+
+    <script src="./data/users.js"></script>
+
+    <script src="./logic/authenticate-user.js"></script>
+    <script src="./logic/register-user.js"></script>
+
 
     <script src="./pages/login-page.js"></script>
     <script src="./pages/register-page.js"></script>
     <script src="./pages/home-page.js"></script>
 
-    <script src="./logic/authenticate-user.js"></script>
-    <script src="./logic/register-user.js"></script>
 
     <script src="index.js"></script>
 
