--- a/staff/jaume-rodriguez/vanilla-app/index.html
+++ b/staff/jaume-rodriguez/vanilla-app/index.html
@@ -8,24 +8,33 @@
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
   <body>
     <script src="libs/coolog.js"></script>
 
     <script src="data/users.js"></script>
+    <script src="data/tasks.js"></script>
 
-    <script src="components/settings-panel.js"></script>
-    <script src="components/tasks-panel.js"></script>
+    <script src="utils/regex.js"></script>
 
-    <script src="pages/register-page.js"></script>
-    <script src="pages/login-page.js"></script>
-    <script src="pages/home-page.js"></script>
+    <script src="components/home-settings.js"></script>
+    <script src="components/home-tasks.js"></script>
+    <script src="components/home-menu-dropdown.js"></script>
+    <script src="components/home-navbar.js"></script>
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate.js"></script>
     <script src="logic/update-user-credentials.js"></script>
+    <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/create-task.js"></script>
+    <script src="logic/update-task.js"></script>
+    <script src="logic/delete-task.js"></script>
+
+    <script src="pages/register-page.js"></script>
+    <script src="pages/login-page.js"></script>
+    <script src="pages/home-page.js"></script>
 
     <script src="index.js"></script>
   </body>
