correct the format and TODO_MANAGER

--- a/staff/xavier-zamora/vanilla-js-10/data/index.html
+++ b/staff/xavier-zamora/vanilla-js-10/data/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,18 +8,18 @@
     <title>vanilla-spa</title>
     <link rel="stylesheet" href="../index.css">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+
 <body>
-    
-    
     <script src="../libs/lifejacket.js"></script>
 
     <script src="../utils/regex.js"></script>
 
     <script src="../pages/login-page.js"></script>
     <script src="../pages/register-page.js"></script>
-    <script src="../pages/nav.js"></script>  
+    <script src="../pages/nav.js"></script>
 
     <script src="../data/index.js"></script>
     <script src="../data/users.js"></script>
@@ -34,4 +35,5 @@
     <script src="../components/task-panel.js"></script>
     <script src="../components/add-task-menu.js"></script>
 </body>
+
 </html>
