--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -20,7 +20,10 @@
 
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/register-user.js"></script>
+    <script src="./logic/update-user-email.js"></script>
 
+    <script src="./components/settings-panel.js"></script>
+    <script src="./components/tasks-panel.js"></script>
 
     <script src="./pages/login-page.js"></script>
     <script src="./pages/register-page.js"></script>
