--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -18,12 +18,15 @@
 
     <script src="./data/users.js"></script>
 
+
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/register-user.js"></script>
     <script src="./logic/update-user-email.js"></script>
 
-    <script src="./components/settings-panel.js"></script>
-    <script src="./components/tasks-panel.js"></script>
+    <script src="./components/settings.js"></script>
+    <script src="./components/tasks.js"></script>
+    <script src="./components/navbar.js"></script>
+    <script src="./components/menu.js"></script>
 
     <script src="./pages/login-page.js"></script>
     <script src="./pages/register-page.js"></script>
