add create task logic and integrate it in the view (presentation)

--- a/staff/manuel-barzi/vanilla-app/index.html
+++ b/staff/manuel-barzi/vanilla-app/index.html
@@ -20,6 +20,7 @@
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/update-user-email.js"></script>
     <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/create-task.js"></script>
 
     <script src="components/header-panel.js"></script>
     <script src="components/menu-panel.js"></script>
