--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -12,7 +12,10 @@
 <body>
     <script src="libs/coolog.js"></script>
 
+    <script src="utils/regex.js"></script>
+    
     <script src="data/users.js"></script>
+    <script src="data/tasks.js"></script>
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
