update: new code to authenticate user login and register

--- a/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
+++ b/staff/xavi-grandes/vanilla-app-layered-architecture/index.html
@@ -20,6 +20,8 @@
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
     
+    <script src="componentes/header-panel.js"></script>
+    <script src="componentes/menu-panel.js"></script>
     <script src="componentes/settings-panel.js"></script>
     <script src="componentes/tasks-panel.js"></script>
 
