--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -17,14 +17,18 @@
     <script src="./utils/regex.js"></script>
 
     <script src="./data/users.js"></script>
+    <script src="./data/tasks.js"></script>
 
 
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/register-user.js"></script>
     <script src="./logic/update-user-email.js"></script>
+    <script src="./logic/create-task.js"></script>
+
+    <script src="./logic/retrieve-task.js"></script>
 
     <script src="./components/settings.js"></script>
-    <script src="./components/tasks.js"></script>
+    <script src="./components/tasks-panel.js"></script>
     <script src="./components/navbar.js"></script>
     <script src="./components/menu.js"></script>
 
@@ -34,9 +38,6 @@
 
 
     <script src="index.js"></script>
-
-    <!-- TODO:attach  all files -->
-
 
 </body>
 
