add menu on task item and improve all logics

--- a/staff/xavier-zamora/vanilla-js-13/data/index.html
+++ b/staff/xavier-zamora/vanilla-js-13/data/index.html
@@ -31,7 +31,9 @@
     <script src="../logic/nav-logic.js"></script>
     <script src="../logic/addTaskMenu-logic.js"></script>
     <script src="../logic/addNewTask-logic.js"></script>
+    <script src="../logic/addNewItem.js"></script>
 
+    <script src="../components/itemInfo.js"></script>
     <script src="../components/setting-panel.js"></script>
     <script src="../components/task-panel.js"></script>
     <script src="../components/add-task-menu.js"></script>
