--- a/staff/gabriel-rodriguez/app/home.html
+++ b/staff/gabriel-rodriguez/app/home.html
@@ -5,29 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link />
+    <link rel="stylesheet" href="style.css"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />">
+        >
+    <title>home</title>
 </head>
 
 <body>
     <header>
-        <button class="header__menu-button container"><span class="material-symbols-outlined">menu
-            </span></button>
+        <button class="header__menu-button container"><span class="material-symbols-outlined">Menu</span></button>
+        <!--En HTML, la etiqueta span es un elemento contenedor en línea genérico. Las etiquetas span generalmente envuelven secciones de texto con fines de estilo 
+            o para agregar atributos a una sección de texto sin crear una nueva línea de contenido-->
 
-
-        <h1 class="header__title">Hello,user</h1>
+        <h1>Hello, user</h1>
 
         <div class="header__menu">
             <button>Profile</button>
-            <button><span class="material-symbols-outlined">
-                    logout
-                </span></button>
+            <button><span class="material-symbols-outlined">Logout</span></button>
         </div>
-        <a href="/home.html"><img src="https://fakeimg.pl/30/ff0000"></a>
+
     </header>
+
 </body>
 
 </html>
