--- a/staff/gabriel-rodriguez/app/register.html
+++ b/staff/gabriel-rodriguez/app/register.html
@@ -10,28 +10,33 @@
 </head>
 
 <body class="container">
+    <!-- representa una sección de un documento que contiene controles interactivos que permiten 
+        a un usuario enviar información a un servidor web-->
     <form action="" method="post">
         <div>
             <label for="name">Name</label>
-            <input type="text" name="" id="name" placeholder="input your name">
+            <input type="name" name="" id="name" placeholder="Input your name">
+            <!--representa una etiqueta para un elemento en una interfaz de usuario-->
+            <!--se usa para crear controles interactivos para formularios basados en la web con el fin de recibir datos del usuario.-->
         </div>
 
         <div>
             <label for="email">E-mail</label>
-            <input type="email" name="" id="email" placeholder="input your email">
+            <input type="email" name="" id="email" placeholder="Input your email">
         </div>
 
         <div>
-
             <label for="password">Password</label>
-            <input type="password" name="" id="password" placeholder="input your password">
+            <input type="password" name="" id="password" placeholder="Input your password">
         </div>
 
+        <!-- <button onclick="login.html">Register</button> -->
 
-        <button>Register</button>
+
     </form>
 
     <a href="login.html">Register</a>
+
 </body>
 
 </html>
