--- a/staff/xavier-zamora/vanilla-js-13/data/index.html
+++ b/staff/xavier-zamora/vanilla-js-13/data/index.html
@@ -32,6 +32,7 @@
     <script src="../logic/addTaskMenu-logic.js"></script>
     <script src="../logic/addNewTask-logic.js"></script>
     <script src="../logic/addNewItem.js"></script>
+    <script src="../logic/itemInfo-logics.js"></script>
 
     <script src="../components/itemInfo.js"></script>
     <script src="../components/setting-panel.js"></script>
