--- a/staff/xavier-zamora/strings/index.html
+++ b/staff/xavier-zamora/strings/index.html
@@ -12,5 +12,6 @@
     <script src="repeat.js"></script>
     <script src="concat.js"></script>
     <script src="at.js"></script>
+    <script src="concatTest.js"></script>
 </body>
 </html>
