--- a/staff/federico-lopez/arrays/tests.html
+++ b/staff/federico-lopez/arrays/tests.html
@@ -9,5 +9,7 @@
   <body>
     <script src="index-of.js"></script>
     <script src="index-of.test.js"></script>
+    <script src="join.js"></script>
+    <script src="join.test.js"></script>
   </body>
 </html>
