--- a/staff/jaume-rodriguez/strings/tests.html
+++ b/staff/jaume-rodriguez/strings/tests.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>strings</title>
   </head>
   <body>
+    <script src="at.js"></script>
+    <script src="at.test.js"></script>
     <script src="substring.js"></script>
     <script src="substring.test.js"></script>
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
+    <script src="repeat.js"></script>
+    <script src="repeat.test.js"></script>
+    <script src="slice.js"></script>
+    <script src="slice.test.js"></script>
   </body>
 </html>
