--- a/staff/manuel-barzi/arrays/tests.html
+++ b/staff/manuel-barzi/arrays/tests.html
@@ -7,6 +7,7 @@
     <title>arrays</title>
 </head>
 <body>
-    
+    <script src="for-each.js"></script>
+    <script src="for-each.test.js"></script>
 </body>
 </html>
