--- a/staff/federico-lopez/arrays/tests.html
+++ b/staff/federico-lopez/arrays/tests.html
@@ -11,5 +11,7 @@
     <script src="index-of.test.js"></script>
     <script src="join.js"></script>
     <script src="join.test.js"></script>
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
   </body>
 </html>
