--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>arrays</title>
   </head>
-  <body></body>
+  <body>
+    <script src="at.js"></script>
+    <script src="at.test.js"></script>
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
+    <script src="includes.js"></script>
+    <script src="includes.test.js"></script>
+  </body>
 </html>
