--- a/staff/ignacio-nuñez/vanila-app/index.html
+++ b/staff/ignacio-nuñez/vanila-app/index.html
@@ -14,14 +14,23 @@
 <body>
     <script src="./libs/coolog.js"></script>
 
+    <script src="./utils/regex.js"></script>
+
     <script src="./data/users.js"></script>
+    <script src="./data/tasks.js"></script>
 
     <script src="./logic/register-user.js"></script>
     <script src="./logic/authenticate-user.js"></script>
-    <script src="./logic/update-user-email.js"></script>
+    <script src="./logic/update-user-dates.js"></script>
+    <script src="./logic/create-task.js"></script>
+    <script src="./logic/update-task.js"></script>
+    <script src="./logic/delete-task.js"></script>
+    <script src="./logic/retrieve-task.js"></script>
 
     <script src="./components/settings-panel.js"></script>
     <script src="./components/tasks-panel.js"></script>
+    <script src="./components/menu-panel.js"></script>
+    <script src="./components/header-panel.js"></script>
 
     <script src="./pages/home-page.js"></script>
     <script src="./pages/login-page.js"></script>
