--- a/staff/cristina-marquez/strings/index.html
+++ b/staff/cristina-marquez/strings/index.html
@@ -11,6 +11,18 @@
 <body>
     <script src="to-capital-case.js"></script>
     <script src="to-capital-case.test.js"></script>
+
+    <script src="at.js"></script>
+    <script src="at.test.js"></script>
+
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
+
+    <script src="repeat.js"></script>
+    <script src="repeat.test.js"></script>
+
+    <script src="slice.js"></script>
+    <script src="slice.test.js"></script>
 </body>
 
-</html>git
+</html>
