add task button, update task in db

--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -24,6 +24,7 @@
     <script src="./logic/register-user.js"></script>
     <script src="./logic/update-user-email.js"></script>
     <script src="./logic/create-task.js"></script>
+    <script src="./logic/update-task.js"></script>
 
     <script src="./logic/retrieve-task.js"></script>
 
