--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -25,6 +25,7 @@
     <script src="./logic/update-user-email.js"></script>
     <script src="./logic/create-task.js"></script>
     <script src="./logic/update-task.js"></script>
+    <script src="./logic/delete-task.js"></script>
 
     <script src="./logic/retrieve-task.js"></script>
 
