added a finished and working new indexOf array method with all 5 iterated solutions.

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -13,5 +13,7 @@
     <script src="concat.test.js"></script>
     <script src="includes.js"></script>
     <script src="includes.test.js"></script>
+    <script src="indexOf.js"></script>
+    <script src="indexOf.test.js"></script>
   </body>
 </html>
