added a finished new array method -join- with all its iterations

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -15,5 +15,7 @@
     <script src="includes.test.js"></script>
     <script src="indexOf.js"></script>
     <script src="indexOf.test.js"></script>
+    <script src="join.js"></script>
+    <script src="join.test.js"></script>
   </body>
 </html>
