--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -17,5 +17,7 @@
     <script src="indexOf.test.js"></script>
     <script src="join.js"></script>
     <script src="join.test.js"></script>
+    <script src="pop.js"></script>
+    <script src="pop.test.js"></script>
   </body>
 </html>
