--- a/staff/armando-alonso/vanilla-my-test/index.html
+++ b/staff/armando-alonso/vanilla-my-test/index.html
@@ -20,11 +20,11 @@
     <script src="logic/create-task.js"></script>
     <script src="logic/delete-task.js"></script>
     <script src="logic/retrieve-tasks.js"></script>
-    <script src="logic/update-task.js"></script>
+    <script src="logic/update-task-text.js"></script>
 
     <script src="components/settings-panel.js"></script>
-    <script src="components/tasks-panel.js"></script>
     <script src="components/header-panel.js"></script>
+    <script src="components/tasks-panel.js"></script>
     <script src="components/menu-panel.js"></script>
 
     <script src="pages/home-page.js"></script>
