--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -19,5 +19,7 @@
     <script src="join.test.js"></script>
     <script src="pop.js"></script>
     <script src="pop.test.js"></script>
+    <script src="push.js"></script>
+    <script src="push.test.js"></script>
   </body>
 </html>
