--- a/staff/manuel-barzi/arrays/tests.html
+++ b/staff/manuel-barzi/arrays/tests.html
@@ -9,5 +9,8 @@
 <body>
     <script src="for-each.js"></script>
     <script src="for-each.test.js"></script>
+
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
 </body>
 </html>
