--- a/staff/xavi-grandes/arrays/test-arrays.html
+++ b/staff/xavi-grandes/arrays/test-arrays.html
@@ -15,5 +15,8 @@
 
     <script src="join.js"></script>
     <script src="join.test.js"></script>
+
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
 </body>
 </html>
