string function at.()

--- a/staff/xavi-grandes/strings/tests.html
+++ b/staff/xavi-grandes/strings/tests.html
@@ -16,5 +16,8 @@
 
     <script src="concat.js"></script>
     <script src="concat.text.js"></script>
+
+    <script src="at.js"></script>
+    <script src="at.test.js"></script>
 </body>
 </html>
