--- a/staff/federico-alejandro/arrays/test.html
+++ b/staff/federico-alejandro/arrays/test.html
@@ -42,5 +42,8 @@
 
     <script src="length.js"></script>
     <script src="length.test.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
 </body>
 </html>
