--- a/staff/ignacio-nuñez/functions-tests/arrays/index.html
+++ b/staff/ignacio-nuñez/functions-tests/arrays/index.html
@@ -22,8 +22,14 @@
     <script src="map.js"></script>
     <script src="map.test.js"></script>
 
-    
     <script src="every.js"></script>
     <script src="every.test.js"></script>
+
+    <script src="flat.1.js"></script>
+    <!-- <script src="flat.js"></script> -->
+    <script src="flat.test.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
 </body>
 </html>
