new string function (concat) and test add to strings folder

--- a/staff/xavi-grandes/strings/tests.html
+++ b/staff/xavi-grandes/strings/tests.html
@@ -15,7 +15,7 @@
     <script src="repeat.test.js"></script>
 
     <script src="concat.js"></script>
-    <script src="concat.text.js"></script>
+    <script src="concat.test.js"></script>
 
     <script src="at.js"></script>
     <script src="at.test.js"></script>
