corrected -includes- array method and finished new array method -every-

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -21,5 +21,7 @@
     <script src="pop.test.js"></script>
     <script src="push.js"></script>
     <script src="push.test.js"></script>
+    <script src="every.js"></script>
+    <script src="every.test.js"></script>
   </body>
 </html>
