--- a/staff/yubal-hormiga/Arrays/test.html
+++ b/staff/yubal-hormiga/Arrays/test.html
@@ -7,12 +7,21 @@
     <title>Array</title>
 </head>
 <body>
-    <script src="includes/includes.1.js"></script>
-    <script src="includes/includes.2.js"></script>
-    <script src="includes/includes.3.js"></script>
-    <script src="includes/includes.4.js"></script>
-    <script src="includes/includes.5.js"></script>
+<body>  
+
+    <script src="filter/filter.js"></script>
+    <script src="filter/filter.test.js"></script>
+    <script src="every/every.js"></script>
+    <script src="every/every.test.js"></script>
+    <script src="some/some.js"></script>
+    <script src="some/some.test.js"></script>
+    <script src="find/find.1.js"></script>
+    <script src="find/find.test.js"></script>
+    <script src="includes/includes.js"></script>
     <script src="includes/includes.test.js"></script>
+    <script src="concat/concat.js"></script>
+    <script src="concat/concat.1.js"></script>
+    <script src="concat/concat.test.js"></script>
     <script src="pop/pop.js"></script>
     <script src="pop/pop.test.js"></script>
     <script src="push/push.js"></script>
