added the array method -filter- completely finished with 2 iterations

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -23,5 +23,7 @@
     <script src="push.test.js"></script>
     <script src="every.js"></script>
     <script src="every.test.js"></script>
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
   </body>
 </html>
