added the array method -find- completely finished with all its iterations

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -25,5 +25,7 @@
     <script src="every.test.js"></script>
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
+    <script src="find.js"></script>
+    <script src="find.test.js"></script>
   </body>
 </html>
