added new distribution on arrays and string methods. Now files.js are inside their own method type. Ex; find/find.js

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -7,25 +7,25 @@
     <title>arrays</title>
   </head>
   <body>
-    <script src="at.js"></script>
-    <script src="at.test.js"></script>
-    <script src="concat.js"></script>
-    <script src="concat.test.js"></script>
-    <script src="includes.js"></script>
-    <script src="includes.test.js"></script>
-    <script src="indexOf.js"></script>
-    <script src="indexOf.test.js"></script>
-    <script src="join.js"></script>
-    <script src="join.test.js"></script>
-    <script src="pop.js"></script>
-    <script src="pop.test.js"></script>
-    <script src="push.js"></script>
-    <script src="push.test.js"></script>
-    <script src="every.js"></script>
-    <script src="every.test.js"></script>
-    <script src="filter.js"></script>
-    <script src="filter.test.js"></script>
-    <script src="find.js"></script>
-    <script src="find.test.js"></script>
+    <script src="at/at.js"></script>
+    <script src="at/at.test.js"></script>
+    <script src="concat/concat.js"></script>
+    <script src="concat/concat.test.js"></script>
+    <script src="includes/includes.js"></script>
+    <script src="includes/includes.test.js"></script>
+    <script src="indexOf/indexOf.js"></script>
+    <script src="indexOf/indexOf.test.js"></script>
+    <script src="join/join.js"></script>
+    <script src="join/join.test.js"></script>
+    <script src="pop/pop.js"></script>
+    <script src="pop/pop.test.js"></script>
+    <script src="push/push.js"></script>
+    <script src="push/push.test.js"></script>
+    <script src="every/every.js"></script>
+    <script src="every/every.test.js"></script>
+    <script src="filter/filter.js"></script>
+    <script src="filter/filter.test.js"></script>
+    <script src="find/find.js"></script>
+    <script src="find/find.test.js"></script>
   </body>
 </html>
