--- a/staff/jaume-rodriguez/strings/tests.html
+++ b/staff/jaume-rodriguez/strings/tests.html
@@ -7,15 +7,15 @@
     <title>strings</title>
   </head>
   <body>
-    <script src="at.js"></script>
-    <script src="at.test.js"></script>
-    <script src="substring.js"></script>
-    <script src="substring.test.js"></script>
-    <script src="concat.js"></script>
-    <script src="concat.test.js"></script>
-    <script src="repeat.js"></script>
-    <script src="repeat.test.js"></script>
-    <script src="slice.js"></script>
-    <script src="slice.test.js"></script>
+    <script src="at/at.js"></script>
+    <script src="at/at.test.js"></script>
+    <script src="substring/substring.js"></script>
+    <script src="substring/substring.test.js"></script>
+    <script src="concat/concat.js"></script>
+    <script src="concat/concat.test.js"></script>
+    <script src="repeat/repeat.js"></script>
+    <script src="repeat/repeat.test.js"></script>
+    <script src="slice/slice.js"></script>
+    <script src="slice/slice.test.js"></script>
   </body>
 </html>
