added 4 more array methods completely finished: findIndex, forEach, map and some

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -27,5 +27,13 @@
     <script src="filter/filter.test.js"></script>
     <script src="find/find.js"></script>
     <script src="find/find.test.js"></script>
+    <script src="forEach/forEach.js"></script>
+    <script src="forEach/forEach.test.js"></script>
+    <script src="map/map.js"></script>
+    <script src="map/map.test.js"></script>
+    <script src="some/some.js"></script>
+    <script src="some/some.test.js"></script>
+    <script src="findIndex/findIndex.js"></script>
+    <script src="findIndex/findIndex.test.js"></script>
   </body>
 </html>
