--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -35,5 +35,7 @@
     <script src="some/some.test.js"></script>
     <script src="findIndex/findIndex.js"></script>
     <script src="findIndex/findIndex.test.js"></script>
+    <script src="flat/flat.js"></script>
+    <script src="flat/flat.test.js"></script>
   </body>
 </html>
