new string slice done with 4 cases and add to strings folder

--- a/staff/xavi-grandes/strings/tests.html
+++ b/staff/xavi-grandes/strings/tests.html
@@ -19,5 +19,8 @@
 
     <script src="at.js"></script>
     <script src="at.test.js"></script>
+
+    <script src="slice.js"></script>
+    <script src="slice.test.js"></script>
 </body>
 </html>
