add to capital case function and test

--- a/staff/manuel-barzi/strings/tests.html
+++ b/staff/manuel-barzi/strings/tests.html
@@ -9,5 +9,8 @@
 <body>
     <script src="substring.js"></script>
     <script src="substring.test.js"></script>
+
+    <script src="to-capital-case.js"></script>
+    <script src="to-capital-case.test.js"></script>
 </body>
 </html>
