--- a/staff/xavi-grandes/strings/tests.html
+++ b/staff/xavi-grandes/strings/tests.html
@@ -22,5 +22,8 @@
 
     <script src="slice.js"></script>
     <script src="slice.test.js"></script>
+
+    <script src="to-capital-case.js"></script>
+    <script src="to-capital-case.test.js"></script>
 </body>
 </html>
